--- a/home.html
+++ b/home.html
@@ -4,6 +4,8 @@
 <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     	
@@ -36,10 +38,22 @@
 	</div>
 </ul>
 
-  </nav>
-+        
+  </nav>      
 
-	<img src="https://media.massmutual.com/~/media/financial%20professionals/m/maria-j-vintimilla.jpg">
+  	<div id="image">
+      <div class="col s12 m8 offset-m2 l6 offset-l3">
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row valign-wrapper">
+            <div class="col s2">
+              <img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAATDAAAAJDU3ZWJiMWNhLWMyNTQtNGRiOC1iMTZmLTdmOGE0NmExNzc4OQ.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+            </div>
+            <div class="col s10">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 	
   <div id="sidebar1">
 	   <h1>Education</h1>
@@ -106,10 +120,39 @@
 	Email:<br>
 	<input type="text" email="email">
 	</br>
+	  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">here</i>
+  </button>
 </form>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="portfolio.js"></script>
+
+          <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2014 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
 </body>
 </html>
