--- a/repos.html
+++ b/repos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Maria's Blog</title>
+  <title>Maria's Repos</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ultra">
   <link rel="stylesheet" type="text/css" href="Stylesheets.css">
