edited html and css

--- a/repos.html
+++ b/repos.html
@@ -4,16 +4,33 @@
   <title>Maria's Repos</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ultra">
-  <link rel="stylesheet" type="text/css" href="Stylesheets.css">
+  <link rel="stylesheet" type="text/css" href="repos.css">
 </head>
 <body>
-  <!-- Set Up navbar as an aside in this page -->
-  <nav class="bnav">
+<!--beginning of NavBar-->
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Welcome to Maria's Portfolio!</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-primary btn-lg active">
+              <li><a href="home.html">home</a>
+              </li> 
+            </button>
+              </li>
+              <li><button type="button" class="btn btn-primary btn-lg">
+              <li><a href="blog.html"></a>blog</li> </button></a></li>
+              <li><button type="button" class="btn btn-default btn-lg">
+              <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
+          </div>
+        </ul>
+  </div>
+
     <ul>
       <li><a href="home.html">Home</a>
       <li><a href="blog.html">Home</a>
    </ul>
-  </nav>
+
   <article class="blog">
     <p>Welcome!</p>
   </article>
