--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,28 @@
 
 </head>
 <body>
+<!--beginning of NavBar-->
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Welcome to Maria's Portfolio!</a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-primary btn-lg active">
+              <li><a href="home.html">home</a>
+              </li> 
+            </button>
+              </li>
+              <li><button type="button" class="btn btn-primary btn-lg">
+              <li><a href="home.html"></a>home</li> </button></a></li>
+              <li><button type="button" class="btn btn-primary btn-lg">
+              <li><a href="blog.html"></a>blog</li> </button></a></li>
+              <li><button type="button" class="btn btn-default btn-lg">
+              <li class="active"><a href="repos.html">My Repos/Git</a></li> </button>
+          </div>
+        </ul>
+  </div>
+</nav>      
+
   <img src="https://www.facebook.com/photo.php?fbid=10207545181969401&=4b872fdf5d">
 
   <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300italic' rel='stylesheet' type='text/css'>
